feat(fabric): added endpoint for list of transaction receipts
